force-app/main/default/objects/FEC_Template__c/fields/FEC_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_API_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>