force-app/main/default/objects/FEC_Template__c/fields/FEC_Applicable_for_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applicable_for_Mailbox__c</fullName>
    <label>Applicable for Mailbox</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dichvukhachhang@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>dichvukhachhang@ubank.vn</fullName>
            </value>
            <value>
                <fullName>supportcsm@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>cssupport@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>customercare@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>e_com@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>F2F@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>cs_d2c@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>CS_OM@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>CS_QC_TEAM@fecredit.com.vn</fullName>
            </value>
              <value>
                <fullName>duongauto4045@gmail.com</fullName>
            </value>
            <value>
                <fullName>supportcsm_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>customercare_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>cs_d2c_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>e_com_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>cs_om_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>f2f_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>cs_qc_team_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>cssupport_uat@fecredit.com.vn</fullName>
            </value>
            <value>
                <fullName>dichvukhachhang_uat@ubank.vn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>