force-app/main/default/objects/FEC_Template__c/fields/FEC_Body__c.field-meta.xml
<CustomField>
    <fullName>FEC_Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>