force-app/main/default/objects/FEC_Template__c/fields/FEC_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Description__c</fullName>
    <description>Mô tả</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>