force-app/main/default/objects/FEC_Template__c/fields/FEC_Enhanced_Letterhead__c.field-meta.xml
<CustomField>
    <fullName>FEC_Enhanced_Letterhead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enhanced Letterhead</label>
    <referenceTo>FEC_Enhanced_Letterhead__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>