force-app/main/default/objects/FEC_Template__c/fields/FEC_Folder__c.field-meta.xml
<CustomField>
    <fullName>FEC_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>FEC_Folder__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>