force-app/main/default/objects/FEC_Template__c/fields/FEC_Is_ZNS_Template__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_ZNS_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True nếu là ZNS Template, ngược lại False</description>
    <label>Is ZNS Template</label>
    <type>Checkbox</type>
</CustomField>