force-app/main/default/objects/FEC_Template__c/fields/FEC_Preview_ZNS_Url__c.field-meta.xml
<CustomField>
    <fullName>FEC_Preview_ZNS_Url__c</fullName>
    <description>Preview URL ZNS Template</description>
    <label>Preview ZNS Url</label>
    <type>Url</type>
</CustomField>