force-app/main/default/objects/FEC_Template__c/fields/FEC_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>FEC_Subject_Line__c</fullName>
    <label>Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>