force-app/main/default/objects/FEC_Template__c/fields/FEC_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Template_Name__c</fullName>
    <description>Tên template</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>