force-app/main/default/objects/FEC_Template__c/fields/FEC_Template_ZNS_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Template_ZNS_Status__c</fullName>
    <description>Status của ZNS Template (REJECT, ENABLE, ... )</description>
    <label>Template ZNS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>